--- a/docker-nginx/nginx/nginx.conf
+++ b/docker-nginx/nginx/nginx.conf
@@ -42,7 +42,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
 
-        proxy_pass              HTTP://172.16.0.8;      
+        proxy_pass              http://172.16.0.8;      
         proxy_redirect          http://$host https://$host;
 
         # Make sure to serve cookies only via secure connections.
@@ -90,7 +90,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
 
-        proxy_pass              HTTP://172.16.0.8;      
+        proxy_pass              http://172.16.0.8;      
         proxy_redirect          http://$host https://$host;
 
         # Make sure to serve cookies only via secure connections.
