--- a/docker-kibana/kibana-compose.yml
+++ b/docker-kibana/kibana-compose.yml
@@ -6,8 +6,11 @@ services:
     ports:
       - "5601:5601"
     networks:
-      - kibana-network
+      kibana-network:
+        ipv4_address: 172.16.0.9
+    hostname: kibana.opencast-dsa.local 
+
+
 networks:
   kibana-network:
-    external:
-      name: external-opencast-net
+    name: external-opencast-moodle-network
